# msgr

./: .gitignore  .replit  CopyPastes.md  README.md  filters.py  get.py  init.sh  main.py  messages.txt  pyproject.toml  requirements.txt  send.py  settings.py
.github/ISSUE_TEMPLATE/: chat-filter-request.md
.github/workflows/: python-app.yml
templates/: 404.html  500.html  anti-spam.html  full.html  get_UUID.html  index.html  info.html  message_sent.html  send.html  style.css  too_long.html
