[tool.poetry]
name = "msgr"
version = "1.4.2"
description = "a simple messaging platform with an API"
authors = ["gabrielzv1233"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^2.3.3"
requests = "^2.31.0"
geoip2 = "^4.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"